# autotrading

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
app/: main.py
app/api/: router.py  router_account.py  router_auth.py  router_order.py  router_order_query.py  router_realtime.py  router_rebalance.py  router_safety.py  router_strategy.py
app/broker/: celery_app.py  tasks.py
app/broker/kis/: account.py  auth.py  base.py  enums.py  (+3 more)
app/core/: constants.py  enums.py  exceptions.py  settings.py  settings_rebalance.py  settings_strategy.py  strategy_settings.py
app/db/: session.py
app/domain/: order_state.py
app/repository/: dart_financial_statement_repository.py  order_event_repository.py  order_repository.py  rebalance_repository.py
app/schemas/: account.py  base.py  kis.py  order.py
app/services/: account_service.py  auth_service.py  trade_service.py
app/strategy/: README.md
app/utils/: discord.py  distributed_lock.py  logger.py  market_calendar.py  utils.py
app/websocket/: manager.py  order_ws.py  publisher.py  subscriber.py
app/worker/: celery_app.py  recovery.py  runtime.py  tasks_order.py  tasks_order_status.py  tasks_rebalance.py  tasks_recovery.py
public_release/: Dockerfile  PUBLIC_RELEASE_NOTICE.md  README.md  docker-compose.yml  pyproject.toml
public_release/app/: main.py
scripts/: create_public_version.py
tests/: test_fdr_provider.py  test_kis_integration.py  test_kis_order.py  test_kis_worker_queue.py  test_position_diff.py
tests/discord/: test_discord_webhook.py
tests/integration/: conftest.py  test_distributed_lock.py  test_rebalance_integration.py
tests/support/: kis_market_api_mock.py
(+80 files in other folders)
