[project]
name = "autotrading"
version = "0.1.0"
description = "auto trading system"
authors = [
    {name = "kimdaewhi",email = "kimdaewhi@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
